9.8-echo3-in-ns3.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns3
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
  labels:
    app: echo3
  name: echo3
  namespace: ns3
spec:
  ports:
    - port: 1025
      name: tcp
      protocol: TCP
      targetPort: 1025
    - port: 1026
      name: udp
      protocol: TCP
      targetPort: 1026
    - port: 1027
      name: http
      protocol: TCP
      targetPort: 1027
  selector:
    app: echo3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo3
  name: echo3
  namespace: ns3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo3
  strategy: {}
  template:
    metadata:
      labels:
        app: echo3
    spec:
      containers:
        - image: kong/go-echo:latest
          name: echo3
          ports:
            - containerPort: 1025
            - containerPort: 1026
            - containerPort: 1027
          resources: {}
