3-gateway-and-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong-class
  namespace: echons
  annotations:
    konghq.com/gatewayclass-unmanaged: 'true'

spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gw-echo
  namespace: echons
spec:
  gatewayClassName: kong-class
  listeners:
  - name: proxy-http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
         from: All
  - name: proxy-https
    protocol: HTTPS
    port: 443
    hostname: localhost
    # tls:
    #   certificateRefs:
    #   - kind: Secret
    #     group: ""
    #     name: my-tls-secret
    allowedRoutes:
      namespaces:
         from: All
