4.1-IngressRoule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  tls:
    - hosts:
      - localhost
      secretName: my-tls-secret
  rules:
  - http:
      paths:
      - path: /echo-ingress
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 1027
