8-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: echons
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: key-auth-example
spec:
  parentRefs:
  - name: kong-gw-echo
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo-httproute
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
      weight: 50
    - name: echo2
      kind: Service
      port: 1027
      weight: 50
