8.1-IngressRoule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-tls
  namespace: ns3
  annotations:
    # ingress.bluemix.net/client-max-body-size: 200m
    # ingress.bluemix.net/proxy-body-size: 200m
    # ingress.bluemix.net/redirect-to-https: "true"
    # ingress.kubernetes.io/client_max_body_size: 200m
    # ingress.kubernetes.io/ingress.allow-http: "false"
    # ingress.kubernetes.io/rewrite-target: /
    # ingress.kubernetes.io/secure-backends: "true"
    # ingress.kubernetes.io/ssl-redirect: "true"
    # ingress.kubernetes.io/service-upstream: "true"
    # kubernetes.io/ingress.allow-http: "false"
    konghq.com/strip-path: 'true'
    konghq.com/plugins: key-auth-example
spec:
  ingressClassName: kong
  # tls:
  #   - hosts:
  #     - localhost
  #     secretName: my-tls-secret
  rules:
  - http:
      paths:
      - path: /echo-ingress
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo3
            port:
              number: 1027
# Works without the Gateway and Gateway Class - its not using them
