9.6-DestinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: namespace-wide-dr
  namespace: echons
spec:
  exportTo:
  - "*"
  host: "*.echons.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
